--- a/styleguide/source/_patterns/02-organisms/06-topic/05-topic-topic-articles/_topic-topic-articles.scss
+++ b/styleguide/source/_patterns/02-organisms/06-topic/05-topic-topic-articles/_topic-topic-articles.scss
@@ -19,9 +19,9 @@
 
 // Ensure consistent top margins for elements in this section.
 .topic_topic-articles .topic_article-preview > * {
-  @include gutter($margin-top-half...);
+  //@include gutter($margin-top-half...);
 }
 
-.topic_topic-articles .topic_article-preview {
-  @include gutter($padding-bottom-full...);
+.topic_topic-articles .topic_article-preview:not(:first-child) {
+  @include gutter($padding-top-half...);
 }
